backend : integrate redis, changes for Verification Service, UserDto